--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <h3>Work Experience</h3>
             <p><strong>Currently Working :</strong> UI/UX Designer , Renaissance Technologies Pvt. Ltd
               (2017 Apr Onwards)</p>
-            <a href="images/arrow-down-34x34.png" download class="btn btn-black pull-right">Download CV</a> </div>
+            <a href="images/My-Folio.pdf" download class="btn btn-black pull-right">Download CV</a> </div>
         </div>
       </div>
     </div>
